--- a/index.html
+++ b/index.html
@@ -820,11 +820,13 @@
     <script>
         $('.gallery-list').slick({
             slidesToShow: 4,
-            arrow: true
+            arrow: true,
+            swipeToSlide: true
         });
         $('.typeOfGallery-wrap').slick({
             slidesToShow: 1,
-            arrow: true
+            arrow: true,
+            swipeToSlide: true
         });
     </script>
     <script src="/main.js"></script>
