--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="/img/logo.png" alt="silentium">
                 </a>
                 <ul class="nav">
-                    <li><a href="#">Галлерея</a></li>
+                    <li><a href="#">Галерея</a></li>
                     <li>
                         <a href="#" class="showSocial" onclick="showSocial(event)">
                             Соц.сети
