--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
 
 
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="/slick/slick.js"></script>
+    <script type="text/javascript" src="/slick/slick.min.js"></script>
     <script>
         $('.gallery-list').slick({
             arrow: false,
