--- a/index.html
+++ b/index.html
@@ -123,51 +123,66 @@
                 </div>
                 <div class="typeOfGallery-wrap landing-wrap" style="display: none;">
                     <div class="typeOfGallery-items">
-                        <div class="row">
-                            <div class="col-3">
-                                <div class="example">
-                                    <img class="main-img" src="/img/works/landings/silentium-v1.png" alt="Silentium V1">
-                                    <div class="text">
-                                        <div class="name">SILENTIUM-V1</div>
-                                        <img src="./img/works/dollar.svg" alt="buy">
-                                    </div>
-                                </div>
+                        <div class="example">
+                            <img class="main-img" src="/img/works/landings/silentium-v1.png" alt="Silentium V1">
+                            <div class="text">
+                                <div class="name">SILENTIUM-V1</div>
+                                <img src="./img/works/dollar.svg" alt="buy">
                             </div>
-                            <div class="col-3">
-                                <div class="example">
-                                    <img class="main-img" src="/img/works/landings/health.png" alt="Silentium V1">
-                                    <div class="text">
-                                        <div class="name">HELTH DRINK</div>
-                                        <img src="./img/works/dollar.svg" alt="buy">
-                                    </div>
-                                </div>
+                        </div>
+                        <div class="example d-none">
+                            <img class="main-img" src="/img/works/landings/health.png" alt="Silentium V1">
+                            <div class="text">
+                                <div class="name">HELTH DRINK</div>
+                                <img src="./img/works/dollar.svg" alt="buy">
                             </div>
-                            <div class="col-3">
-                                <div class="example">
-                                    <img class="main-img" src="/img/works/landings/asp.png" alt="Silentium V1">
-                                    <div class="text">
-                                        <div class="name">ASP</div>
-                                        <img src="./img/works/dollar.svg" alt="buy">
-                                    </div>
-                                </div>
+                        </div>
+                    </div>
+                    <div class="typeOfGallery-items">
+                        <div class="example">
+                            <img class="main-img" src="/img/works/landings/health.png" alt="Silentium V1">
+                            <div class="text">
+                                <div class="name">HELTH DRINK</div>
+                                <img src="./img/works/dollar.svg" alt="buy">
                             </div>
-                            <div class="col-3">
-                                <div class="example">
-                                    <img class="main-img" src="/img/works/landings/silentium-v2.png" alt="Silentium V1">
-                                    <div class="text">
-                                        <div class="name">SILENTIUM-V2</div>
-                                        <img src="./img/works/dollar.svg" alt="buy">
-                                    </div>
-                                </div>
+                        </div>
+                        <div class="example d-none">
+                            <img class="main-img" src="/img/works/landings/asp.png" alt="Silentium V1">
+                            <div class="text">
+                                <div class="name">ASP</div>
+                                <img src="./img/works/dollar.svg" alt="buy">
                             </div>
-                            <div class="col-3 last-item">
-                                <div class="example">
-                                    <img class="main-img" src="/img/works/landings/silentium-v2.png" alt="Silentium V1">
-                                    <div class="text">
-                                        <div class="name">SILENTIUM-V2</div>
-                                        <img src="./img/works/dollar.svg" alt="buy">
-                                    </div>
-                                </div>
+                        </div>
+                    </div>
+                    <div class="typeOfGallery-items">
+                        <div class="example">
+                            <img class="main-img" src="/img/works/landings/asp.png" alt="Silentium V1">
+                            <div class="text">
+                                <div class="name">ASP</div>
+                                <img src="./img/works/dollar.svg" alt="buy">
+                            </div>
+                        </div>
+                        <div class="example d-none">
+                            <img class="main-img" src="/img/works/landings/asp.png" alt="Silentium V1">
+                            <div class="text">
+                                <div class="name">ASP</div>
+                                <img src="./img/works/dollar.svg" alt="buy">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="typeOfGallery-items">
+                        <div class="example">
+                            <img class="main-img" src="/img/works/landings/silentium-v2.png" alt="Silentium V1">
+                            <div class="text">
+                                <div class="name">SILENTIUM-V2</div>
+                                <img src="./img/works/dollar.svg" alt="buy">
+                            </div>
+                        </div>
+                        <div class="example">
+                            <img class="main-img" src="/img/works/landings/silentium-v2.png" alt="Silentium V1">
+                            <div class="text">
+                                <div class="name">SILENTIUM-V2</div>
+                                <img src="./img/works/dollar.svg" alt="buy">
                             </div>
                         </div>
                     </div>
@@ -1202,9 +1217,19 @@
             ]
         });
         $('.typeOfGallery-wrap').slick({
-            slidesToShow: 1,
+            slidesToShow: 4,
             arrow: true,
-            swipeToSlide: true
+            swipeToSlide: true,
+            adaptiveHeight: true,
+            responsive: [
+                {
+                    breakpoint: 576,
+                    settings: {
+                        slidesToShow: 1,
+                        arrows: false,
+                    },
+                },
+            ]
         });
     </script>
     <script src="/main.js"></script>
