--- a/index.html
+++ b/index.html
@@ -444,6 +444,8 @@
                                     <img src="./img/works/dollar.svg" alt="buy">
                                 </div>
                             </div>
+                        </div>
+                        <div class="typeOfGallery-items">
                             <div class="example">
                                 <img class="main-img" src="/img/works/landings/alinf.png" alt="Silentium V1">
                                 <div class="text">
