--- a/index.html
+++ b/index.html
@@ -383,19 +383,21 @@
                                     <img src="./img/works/dollar.svg" alt="buy">
                                 </div>
                             </div>
-                            <div class="example">
-                                <img class="main-img" src="/img/works/comics/netotvetov.png" alt="Silentium V1">
-                                <div class="text">
-                                    <div class="name">НЕТ ОТВЕТОВ</div>
-                                    <img src="./img/works/dollar.svg" alt="buy">
-                                </div>
-                            </div>
                         </div>
                         <div class="typeOfGallery-items">
                             <div class="example">
                                 <img class="main-img" src="/img/works/comics/obstoyat.png" alt="Silentium V1">
                                 <div class="text">
                                     <div class="name">ОБСТОЯТЕЛЬСТВА</div>
+                                    <img src="./img/works/dollar.svg" alt="buy">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="typeOfGallery-items">
+                            <div class="example">
+                                <img class="main-img" src="/img/works/comics/netotvetov.png" alt="Silentium V1">
+                                <div class="text">
+                                    <div class="name">НЕТ ОТВЕТОВ</div>
                                     <img src="./img/works/dollar.svg" alt="buy">
                                 </div>
                             </div>
