--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="special-wrap">
-                    <div class="typeOfGallery-wrap landing-wrap reanimateG">
+                    <div class="typeOfGallery-wrap landing-wrap">
                         <div class="typeOfGallery-items">
                             <div class="example">
                                 <img class="main-img" src="/img/works/landings/silentium-v1.png" alt="Silentium V1">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="special-wrap">
-                    <div class="typeOfGallery-wrap sketch-wrap reanimateG">
+                    <div class="typeOfGallery-wrap sketch-wrap">
                         <div class="typeOfGallery-items">
                             <div class="example">
                                 <img class="main-img" src="/img/works/skatch/objatia.png" alt="Silentium V1">
@@ -355,7 +355,7 @@
                     </div>
                 </div>
                 <div class="special-wrap">
-                    <div class="typeOfGallery-wrap comics-wrap reanimateG">
+                    <div class="typeOfGallery-wrap comics-wrap">
                         <div class="typeOfGallery-items">
                             <div class="example">
                                 <img class="main-img" src="/img/works/comics/vsetak.png" alt="Silentium V1">
@@ -402,7 +402,7 @@
                     </div>
                 </div>
                 <div class="special-wrap">
-                    <div class="typeOfGallery-wrap portret-wrap reanimateG">
+                    <div class="typeOfGallery-wrap portret-wrap">
                         <div class="typeOfGallery-items">
                             <div class="example">
                                 <img class="main-img" src="/img/works/landings/pofruzhenie.png" alt="Silentium V1">
@@ -456,7 +456,7 @@
                     </div>
                 </div>
                 <div class="special-wrap">
-                    <div class="typeOfGallery-wrap art-wrap reanimateG">
+                    <div class="typeOfGallery-wrap art-wrap">
                         <div class="typeOfGallery-items">
                             <div class="example">
                                 <img class="main-img" src="/img/works/art/poslednee.png" alt="Silentium V1">
