--- a/index.html
+++ b/index.html
@@ -1017,6 +1017,7 @@
     <script type="text/javascript" src="/slick/slick.js"></script>
     <script>
         $('.gallery-list').slick({
+            arrows: true,
             swipeToSlide: true,
             mobileFirst: true,
             responsive: [
