--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="empty-block-left"></div>
                 <div class="empty-block-right"></div>
                 <div class="section_head">
-                    <h2>ГАЛЛЕРЕЯ</h2>
+                    <h2 class="rename">ГАЛЕРЕЯ</h2>
                     <span>КАК ПОРТФОЛИО</span>
                 </div>
                 <div class="gallery-list">
