--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
                     breakpoint: 576,
                     settings: {
                         slidesToShow: 1,
-                        arrows: false,
+                        arrows: true,
                         dots: true
                     },
                 },
