--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                 {
                     breakpoint: 767,
                     settings: {
-                        arrows: false,
+                        arrows: true,
                         slidesToShow: 2,
                     },
                 },
