--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,13 @@
                         arrows: false,
                     },
                 },
+                {
+                    breakpoint: 767,
+                    settings: {
+                        slidesToShow: 2,
+                        arrows: true
+                    },
+                },
             ]
         });
     </script>
