--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
                     breakpoint: 767,
                     settings: {
                         slidesToShow: 2,
-                        arrows: true
+                        arrows: true,
                     },
                 },
             ]
