--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
                         <div class="col-3 col-md-2 image-wrap"><img src="/img/landing.png" alt="Wen Design"></div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-md-6 offset-md-3">
+                        <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-3">
                             <p>Рассказывая мне свою идею или историю, оформляйте ее в тектовый документ. Повествование
                                 насыщайте
                                 важными деталями и нюансами, нюансы очень важны.</p>
@@ -976,7 +976,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-10 offset-1 col-md-6 offset-md-3 flex justify-content-center">
+                        <div class="col-10 offset-1 col-lg-6 offset-lg-3 flex justify-content-center">
                             <form action="post">
                                 <input type="text" name="email" id="email" placeholder="Твой mail...">
                                 <div class="buttons">
@@ -996,7 +996,7 @@
                 <a href="#" class="logo">
                     <img src="/img/logo.png" alt="silentium">
                 </a>
-                <ul class="nav d-none d-md-flex">
+                <ul class="nav d-none d-lg-flex">
                     <li><a href="#">Галлерея</a></li>
                 </ul>
                 <ul class="social">
