--- a/index.html
+++ b/index.html
@@ -1056,6 +1056,13 @@
             adaptiveHeight: true,
             responsive: [
                 {
+                    breakpoint: 1440,
+                    settings: {
+                        arrows: true,
+                        slidesToShow: 3,
+                    },
+                },
+                {
                     breakpoint: 992,
                     settings: {
                         arrows: true,
