--- a/index.html
+++ b/index.html
@@ -1037,14 +1037,9 @@
                     },
                 },
                 {
-                    breakpoint: 992,
+                    breakpoint: 1440,
                     settings: {
-                        slidesToShow: 3,
-                    },
-                },
-                {
-                    breakpoint: 1200,
-                    settings: {
+                        arrows: true,
                         slidesToShow: 3,
                     },
                 },
