--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,13 @@
             adaptiveHeight: true,
             responsive: [
                 {
+                    breakpoint: 2560,
+                    settings: {
+                        arrows: true,
+                        slidesToShow: 4,
+                    },
+                },
+                {
                     breakpoint: 1440,
                     settings: {
                         arrows: true,
