--- a/index.html
+++ b/index.html
@@ -1043,6 +1043,13 @@
                         slidesToShow: 3,
                     },
                 },
+                {
+                    breakpoint: 12560,
+                    settings: {
+                        arrows: true,
+                        slidesToShow: 4,
+                    },
+                },
             ]
         });
         $('.typeOfGallery-wrap').slick({
