--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,13 @@
                     },
                 },
                 {
+                    breakpoint: 1024,
+                    settings: {
+                        arrows: true,
+                        slidesToShow: 3,
+                    },
+                },
+                {
                     breakpoint: 767,
                     settings: {
                         arrows: true,
