--- a/index.html
+++ b/index.html
@@ -1019,6 +1019,7 @@
         $('.gallery-list').slick({
             arrows: true,
             swipeToSlide: true,
+            mobileFirst: true,
             responsive: [
                 {
                     breakpoint: 576,
