--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             <div class="gradient"></div>
         </div>
         <div class="container  container-sm">
-            <div class="gallery" id="gallery-top">
+            <div class="gallery">
                 <div class="empty-block-left"></div>
                 <div class="empty-block-right"></div>
                 <div class="section_head">
-                    <h2 class="rename">ГАЛЕРЕЯ</h2>
+                    <h2 class="rename" id="gallery-top">ГАЛЕРЕЯ</h2>
                     <span>КАК ПОРТФОЛИО</span>
                 </div>
                 <div class="gallery-list">
