--- a/index.html
+++ b/index.html
@@ -976,12 +976,12 @@
                     </div>
                     <div class="row">
                         <div class="col-10 offset-1 col-lg-6 offset-lg-3 flex justify-content-center">
-                            <form action="post">
-                                <input type="text" name="email" id="email" placeholder="Твой mail...">
+                            <form action="mail.php" method="POST">
+                                <input type="text" name="user_email" id="email" placeholder="Твой mail...">
                                 <div class="buttons">
                                     <label for="load"><img src="/img/load.svg" alt="загрузить файл"></label>
                                     <input type="submit" name="" id="tell" value="рассказать">
-                                    <input type="file" name="load" id="load">
+                                    <input type="file" name="user_file" id="load">
                                 </div>
 
                             </form>
