--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
                                 <div class="buttons">
                                     <label for="load"><img src="/img/load.svg" alt="загрузить файл"></label>
                                     <input type="submit" name="" id="tell" value="рассказать">
-                                    <input type="file" name="upload" id="load">
+                                    <input type="file" name="upload" id="load" accept="image/*, application/msword, application/x-compressed, application/x-zip-compressed, application/zip, multipart/x-zip">
                                 </div>
                             </form>
                             <!-- <form action="mail.php" method="POST">
