--- a/index.html
+++ b/index.html
@@ -1006,13 +1006,12 @@
                     <li><a href="#gallery-top" class="toGallery">Галлерея</a></li>
                 </ul>
                 <ul class="social">
-                    <li><a href="https://www.instagram.com/i_am_silentium/?hl=ru" target="_blank"><img src="/img/ig.svg"
-                                alt="instagram"></a></li>
-                    <li><a href="https://t.me/i_am_silentium" target="_blank"><img src="/img/tg.svg" alt="telegram"></a>
+                    <li><a href="https://www.instagram.com/i_am_silentium/?hl=ru" target="_blank"><div class="footer-social footer-inst"></div></a></li>
+                    <li><a href="https://t.me/i_am_silentium" target="_blank"><div class="footer-social footer-tg"></div></a>
                     </li>
-                    <li><a href="https://vk.com/unpredictable_wind" target="_blank"><img src="/img/vk.svg" alt="vk"></a>
+                    <li><a href="https://vk.com/unpredictable_wind" target="_blank"><div class="footer-social footer-vk"></div></a>
                     </li>
-                    <li><a href="mailto: Badbiket96@gmail.com" target="_blank"><img src="/img/mail.svg" alt="mail"></a>
+                    <li><a href="mailto: Badbiket96@gmail.com" target="_blank"><div class="footer-social footer-email"></div></a>
                     </li>
                 </ul>
             </footer>
