--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="/slick/slick-theme.css">
     <link rel="stylesheet" href="bootstrap-grid.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>SilentiumART</title>
 </head>
 <body>
     <div class="main-wrap">
