--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <img src="/img/logo.png" alt="silentium">
                 </a>
                 <ul class="nav">
-                    <li><a href="#gallery-top" class="toGallery">Галлерея</a></li>
+                    <li><a href="#gallery-top" class="toGallery">Галерея</a></li>
+                    <li><a href="#">События</a></li>
                     <li><a href="#" class="showSocial">Соц.сети<img src="/img/arrow-down.svg" class="arrow-down"
                                 alt="показать"></a></li>
                     <li><a href="#" class="showBIO">BIO</a></li>
@@ -1020,7 +1021,7 @@
                     <img src="/img/logo.png" alt="silentium">
                 </a>
                 <ul class="nav d-none d-lg-flex">
-                    <li><a href="#gallery-top" class="toGallery">Галлерея</a></li>
+                    <li><a href="#gallery-top" class="toGallery">Галерея</a></li>
                 </ul>
                 <ul class="social">
                     <li><a href="https://www.instagram.com/i_am_silentium/?hl=ru" target="_blank"><div class="footer-social footer-inst"></div></a></li>
