--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-3">
-                            <p>Рассказывая мне свою идею или историю, оформляйте ее в тектовый документ. Повествование
+                            <p>Рассказывая мне свою идею или историю, оформляйте ее в текстовый документ. Повествование
                                 насыщайте
                                 важными деталями и нюансами, нюансы очень важны.</p>
                             <p>Будет здорово, если вы прикрепите файлы с изображениями или видео, которое мне поможет с
